# DroneProject

./: #ImageSender.py#  FollowLaserBackhp.py  ImageReciever.py~  ImageSender.py  ImageSender.py~  README.md  qr_instructions.txt
Arduino/: Quadcopter_Run_Protocol.ino  Robot_Run_Protocol.ino
Arduino/Quadcopter_Run_Protocol/: Quadcopter_Run_Protocol.ino
BaseStation/: ImageReciever.py
C++/: CMakeCache.txt  CMakeLists.txt~  FeaturePoints  FeaturePoints.cpp  FeaturePoints.cpp~  Makefile  NonFree.cpp  NonFree.cpp~  cmake_install.cmake
C++/FindingPaper/: FeaturePoints  (+11 more)
DataStructures/: BoundedPQueue.h  KDTree.h  Point.h  Readme.md
Doccumentation/: Readme.md
Python/: CameraDiff.py  CircleDetection.py  EdgeDetection.py  EdgePresentation.py  FollowLaser.py  FollowLaserBackhp.py  ImageReciever.py  ImageSender.py  ImageSender2.py  qrReading.py  qrReadingPresentation.py
PythonBinding/: .#DroneUtils.cpp  DistanceTest.py  DroneUtils.cpp  DroneUtils.h  ImageProcessing.py  Makefile  README.txt  RobotAI.py  RobotAi.py  quadCopterControls.py  regressionTest.py  robotAI.py  robotControls.py
QRCode/: Readme.md
RaspberryPi/: FollowLaser.py  FollowLaserDemonstration.py  quadCopterControls.py  robotControls.py
Testing/: #Conversions.h#  #NumpyAllocator.h#  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Conversions.h  Conversions.h~  ImageFunction.cpp  ImageFunction.cpp~  ImageFunction.h  ImageFunction.h~  ImageProcessing.py  ImageProcessing.py~  ImgLib.cpp  ImgLib.cpp~  Makefile  NumpyAllocator.cpp  NumpyAllocator.h  NumpyAllocator.h~  cmake_install.cmake  cv2.cpp  cv2.cpp~
(+17 files in other folders)
